# ProjectDrive16_17

./: .gitignore  ArduinoMsgsREADME  LICENSE  README.md  _config.yml  about.md  engageAutoPilot.sh  hardware.md  index.md  manualControl.sh  reflection.md  software.md  start2.sh  startCustom360LIDAR.sh  timeline.md
Arduino/: ArduinoMsgsREADME  README.md
Arduino/libraries/: .gitignore
Arduino/libraries/ros_lib/msg/: optical_encoder.h
Arduino/libraries/ros_lib/teb_local_planner/: FeedbackMsg.h  ObstacleMsg.h  TrajectoryMsg.h  TrajectoryPointMsg.h
HaarCascade/: NegImgGenerator.py  ObjectDetection.py  README
HaarCascade/trained/: haarcascade_old_spice_fiji_deodorant.xml
Navigation/: BroadcastingaTransform.cpp  BuildMapInstruction.txt  frames.gv
Navigation/devel/: .catkin  .rosinstall  setup.sh
Navigation/devel/lib/pkgconfig/: Setup.pc  setup.pc
Navigation/devel/lib/setup/: broadcast_transform  publish_laser_scan  range_listener  setup  test_node
Navigation/devel/share/Setup/cmake/: SetupConfig.cmake
Navigation/devel/share/setup/cmake/: setupConfig.cmake
Navigation/src/my_map_server/: CMakeLists.txt  package.xml
Navigation/src/navigation_stack/: CMakeLists.txt  Odometry.msg  base_local_planner_params.yaml  costmap_common_params.yaml  lr_area.cpp  move_base.launch  package.xml  rviz.launch
Navigation/src/navigation_stack/config/: base_local_planner_params.yaml
Navigation/src/navigation_stack/launch/: move_base.launch  robot_configuration.launch
Navigation/src/navigation_stack/rviz_cfg/: environment.rviz  mapping.rviz  mapping_demo.rviz
Navigation/src/navigation_stack/src/: CruiseControl.cpp  CruiseControl.h  LaneKeepingAssistance.cpp  LaneKeepingAssistance.h  ObstacleAvoidance.cpp  ObstacleAvoidance.h  ObstacleAvoidanceTemp.cpp  QuickTurning.cpp  QuickTurning.h  SpeedController.cpp  SpeedController.h  UTurnDetection.cpp  UTurnDetection.h  VehicleState.h  WallDetection.cpp  WallDetection.h  beam.cpp  beam.h  drive.cpp  drive.h  old_ObstacleAvoidance.cpp  orientation.cpp  orientation.h  util.cpp  util.h
Navigation/src/setup/: CMakeLists.txt  frames.gv
Navigation/src/setup/src/: ActivateScanseSweep.py  LaserScanFilter.cpp  LaserScanFilter.launch  LaserScanPublisher.cpp  LaserScanPublisherAndRangeListener.cpp  LaserScanPublisherV2.cpp  LaserScanPublisherV3.cpp  RangeListener.cpp  Test.cpp  TransformPublisher.cpp  fast_mode.yaml  imu_fail.cpp  imu_to_orientation.cpp  imu_to_orientation.h  laser_pub_range_sub.cpp  laser_scan_filter_config.yaml  nav_headers.h  odom.cpp  odom_test.cpp  test.cpp  test.launch  test2.launch  tf_pub.cpp  tf_sub.cpp
Navigation/src/steering/: CMakeLists.txt  arduino_esc.ino  package.xml
Navigation/src/steering/ackermann_steering/: ackermann_steering.ino
Navigation/src/steering/arduino_esc/: arduino_esc.ino
Navigation/src/steering/src/: check.c
Navigation/src/steering/steering_ackermann/: steering_ackermann.ino
Navigation/src/steering_old/: CMakeLists.txt
Navigation/src/steering_old/ackermann_steering/: ackermann_steering.ino
Navigation/src/steering_old/src/: check  check.cpp
SLAM/: README.txt
Sensor/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
Sensor/devel/include/rosserial_arduino/: Adc.h  TestRequest.h  TestResponse.h
Sensor/devel/include/rosserial_mbed/: Adc.h  TestRequest.h  TestResponse.h
Sensor/devel/include/rosserial_msgs/: Log.h  RequestMessageInfoRequest.h  RequestMessageInfoResponse.h  RequestParamRequest.h  RequestParamResponse.h  RequestServiceInfoRequest.h  RequestServiceInfoResponse.h  TopicInfo.h
Sensor/devel/include/terarangerone/: TerarangerOneConfig.h
Sensor/devel/lib/pkgconfig/: rosserial_arduino.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_windows.pc  rosserial_xbee.pc  terarangerone.pc
Sensor/devel/lib/python2.7/dist-packages/rosserial_client/: __init__.py
Sensor/devel/lib/python2.7/dist-packages/rosserial_python/: __init__.py
Sensor/devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
Sensor/devel/lib/terarangerone/: terarangerone_node
Sensor/devel/share/rosserial_arduino/cmake/: rosserial_arduino-extras.cmake  rosserial_arduino-msg-paths.cmake  rosserial_arduinoConfig.cmake
Sensor/devel/share/rosserial_client/cmake/: rosserial_clientConfig.cmake
Sensor/devel/share/rosserial_embeddedlinux/cmake/: rosserial_embeddedlinuxConfig.cmake
Sensor/devel/share/rosserial_mbed/cmake/: rosserial_mbed-msg-paths.cmake  rosserial_mbedConfig.cmake
Sensor/devel/share/rosserial_msgs/cmake/: rosserial_msgs-msg-paths.cmake  rosserial_msgsConfig.cmake
Sensor/devel/share/rosserial_python/cmake/: rosserial_pythonConfig.cmake
Sensor/devel/share/rosserial_server/cmake/: rosserial_serverConfig.cmake
Sensor/devel/share/rosserial_test/cmake/: rosserial_testConfig.cmake
Sensor/devel/share/rosserial_tivac/cmake/: rosserial_tivac-extras.cmake  rosserial_tivacConfig.cmake
Sensor/devel/share/rosserial_windows/cmake/: rosserial_windowsConfig.cmake
Sensor/devel/share/rosserial_xbee/cmake/: rosserial_xbeeConfig.cmake
Sensor/devel/share/terarangerone/cmake/: terarangeroneConfig.cmake
Sensor/devel/share/terarangerone/docs/: TerarangerOneConfig-usage.dox  TerarangerOneConfig.dox  TerarangerOneConfig.wikidoc
Sensor/src/: test_optical_encoder.cpp
Sensor/src/Arduino/lidarAngleCalc/: lidarAngleCalc.ino
Sensor/src/IMU/: imu_to_orientation.hpp
Sensor/src/lidarAngleCalcv2/: lidarAngleCalcv2.ino
Sensor/src/msg/: CMakeLists.txt  package.xml
Sensor/src/msg/msg/: imu_orientation.msg  optical_encoder.msg  vehicle_status.msg
Sensor/src/msg/src/: optical_encoder.msg
Sensor/src/usb_alias/: 99-scanse-sweep.rules  99-teraranger-one.rules
Template/: CMakeLists.txt
Test/: README  sh_HelloWorld.cpp  wm_HelloWorld.cpp
Test/Arduino/lidarAngleCalc.ino/: lidarAngleCalc.ino.ino
_includes/: mediaPlayer.html
_layouts/: default.html
assets/css/: style.css  style.scss
lidarAngleCalc/: lidarAngleCalc.ino
(+14 files in other folders)
